# CGRE

./: .dockerignore  .gitignore  Dockerfile  Pipfile  README.md  add_ideal_boxes.py  complete_pipeline.sh  complete_pipeline_docker.sh  determiner_tesseract.py  docker  docker_start.sh  entrypoint.sh  evaluation.py  generate_html.py  pipeline.sh  render_html.py  script.js  style.css
dataset/creation/: generate_html.py  main.py  render_html.py  style.css  to_csv.py  zip_dataset.py
dataset/styleCrawling/: crawler.py  visualise.py
datasetCreation/: dataset_pipeline.sh  generate_html.py  pipeline.sh  render_html.py  script.js  style.css
determination/: determiner_tesseract.py  tesseract_determiner.sh
determination/tesseract_determiner/: tesseract_determiner.cpp
evaluation/: add_boxes.py  evaluate_combinations.py  evaluation.py  visualise.py
localisation/tesseract_localiser/: CMakeLists.txt
localisation_and_determination/: complete_tesseract.py  complete_tesseract_cpp.sh
recognition/complete/: complete_tesseract_cpp.sh
recognition/determination/: CMakeLists.txt  determiner.cpp  tesseract_determiner.cpp
recognition/determination/tesseract_determiner/: CMakeLists.txt
recognition/localisation/: CMakeLists.txt  localiser.cpp  localizer_tesseract.py  tesseract_localiser.sh
styleCrawling/: crawler.py  log_clean_example  log_clean_example.json  log_example  visualise.py
styleCrawling/resources/: urls  urls_reduced  urls_test
tesseract_determiner/: CMakeLists.txt  tesseract_determiner  tesseract_determiner.cpp
tesseract_localiser/: tesseract_localiser.cpp
(+10 files in other folders)
